fix: add extra space when there is no page description

--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -35,6 +35,10 @@
 .titleWrapper {
   display: flex;
   align-items: center;
+
+  &EmptyDesc {
+    margin-bottom: 16px;
+  }
 }
 
 .headerWrapper {
